# Brain

./: CMakeLists.txt  main.cpp
Brain/: Brain.cpp  Brain.h
Dense_Layer/: Dense_Layer.cpp  Dense_Layer.h
Input_Layer/: Input_layer.cpp  Input_layer.h
Layer/: Layer.cpp  Layer.h
Tests/: tests.cpp  tests.h
